example/echo.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  template:
      metadata:
        labels:
          app: echo
      spec:
        containers:
        - name: echo
          image: gcr.io/google_containers/echoserver:1.3
          ports:
          - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 50Mi
