example/echo.service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  selector:
    app: echo
  ports:
  - name: http
    port: 8080
    protocol: TCP
