example/kube-acme.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-acme
  name: kube-acme
spec:
  ports:
  - name: http
    port: 80
    targetPort: 12000
    protocol: TCP
  selector:
    app: kube-acme
