example/example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example
  labels:
    acme-tls: "true"
spec:
  tls:
  - secretName: example-secret
    hosts:
    - example.com
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-service
          servicePort: 80
---
# We add this to any ingress we want to use kube-acme for
# kube-acme will 301 redirect traffic to the https scheme
# if your ingress controller doesn't already
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-acme
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-acme
          servicePort: 80
